# reader

./: .gitmodules  demo.json  package-lock.json  package.json  vite.config.js  需求列表.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: custom-titlebar.css  dark.css  icon.css  reset.css
src/components/: BookCard.vue  BookShelf.vue  ChapterContent.vue  CustomTitleBar.vue  FoliateReader.vue  FormatConverter.vue  ReaderControls.vue  ReaderSettings.vue  ReaderView.vue  TableOfContents.vue
src/libs/: reader.js  view.js
src/libs/tools/: epub.js  epubcfi.js  pdf.js  tts.js  txt.js
src/libs/ui/: paginator.js  progress.js  tree.js
src/pages/: BookShelf.vue  ReaderView.vue
src/utils/: book.js  convert.js  pageCalculator.js  recordLocation.js  regexSettings.js  settingsManager.js  styleUtil.js  theme.js  tts.js  ttsData.js
