[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# EPUB解析库
epub = "2.0"
# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
# URL编码
urlencoding = "2.1"
# 图像处理
base64 = "0.21"
# 正则表达式
regex = "1.0"
# 文件系统操作
dirs = "5.0"
crc32fast = "1.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"
